build: 更新 Dockerfile 和 main.go
- 在 Dockerfile 中注释掉 fuse-overlayfs 相关配置
- 更新 Dockerfile 中的存储驱动为 vfs，并配置 runroot 和 graphroot
- 在 main.go 中添加从文件读取镜像仓库用户名和密码的功能
- 更新 pushImage 函数，添加使用用户名和密码进行认证
