# api-server/api/v1/build_task/build_task.pb.validate.go
@@ -273,6 +273,112 @@ var _ interface {
 	ErrorName() string
 } = CreateBuildTaskRequestValidationError{}
 
+// Validate checks the field values on CreateBuildTaskResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *CreateBuildTaskResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on CreateBuildTaskResponse with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// CreateBuildTaskResponseMultiError, or nil if none found.
+func (m *CreateBuildTaskResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *CreateBuildTaskResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for AppName
+
+	// no validation rules for JobName
+
+	if len(errors) > 0 {
+		return CreateBuildTaskResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// CreateBuildTaskResponseMultiError is an error wrapping multiple validation
+// errors returned by CreateBuildTaskResponse.ValidateAll() if the designated
+// constraints aren't met.
+type CreateBuildTaskResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m CreateBuildTaskResponseMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m CreateBuildTaskResponseMultiError) AllErrors() []error { return m }
+
+// CreateBuildTaskResponseValidationError is the validation error returned by
+// CreateBuildTaskResponse.Validate if the designated constraints aren't met.
+type CreateBuildTaskResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e CreateBuildTaskResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e CreateBuildTaskResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e CreateBuildTaskResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e CreateBuildTaskResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e CreateBuildTaskResponseValidationError) ErrorName() string {
+	return "CreateBuildTaskResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e CreateBuildTaskResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCreateBuildTaskResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = CreateBuildTaskResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = CreateBuildTaskResponseValidationError{}
+
 // Validate checks the field values on ListBuildTaskResponse with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, the first error encountered is returned, or nil if there are no violations.
@@ -408,107 +514,3 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = ListBuildTaskResponseValidationError{}
-
-// Validate checks the field values on IdentityRequest with the rules defined
-// in the proto definition for this message. If any rules are violated, the
-// first error encountered is returned, or nil if there are no violations.
-func (m *IdentityRequest) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on IdentityRequest with the rules
-// defined in the proto definition for this message. If any rules are
-// violated, the result is a list of violation errors wrapped in
-// IdentityRequestMultiError, or nil if none found.
-func (m *IdentityRequest) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *IdentityRequest) validate(all bool) error {
-	if m == nil {
-		return nil
-	}
-
-	var errors []error
-
-	// no validation rules for AppName
-
-	// no validation rules for JobName
-
-	if len(errors) > 0 {
-		return IdentityRequestMultiError(errors)
-	}
-
-	return nil
-}
-
-// IdentityRequestMultiError is an error wrapping multiple validation errors
-// returned by IdentityRequest.ValidateAll() if the designated constraints
-// aren't met.
-type IdentityRequestMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m IdentityRequestMultiError) Error() string {
-	msgs := make([]string, 0, len(m))
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m IdentityRequestMultiError) AllErrors() []error { return m }
-
-// IdentityRequestValidationError is the validation error returned by
-// IdentityRequest.Validate if the designated constraints aren't met.
-type IdentityRequestValidationError struct {
-	field  string
-	reason string
-	cause  error
-	key    bool
-}
-
-// Field function returns field value.
-func (e IdentityRequestValidationError) Field() string { return e.field }
-
-// Reason function returns reason value.
-func (e IdentityRequestValidationError) Reason() string { return e.reason }
-
-// Cause function returns cause value.
-func (e IdentityRequestValidationError) Cause() error { return e.cause }
-
-// Key function returns key value.
-func (e IdentityRequestValidationError) Key() bool { return e.key }
-
-// ErrorName returns error name.
-func (e IdentityRequestValidationError) ErrorName() string { return "IdentityRequestValidationError" }
-
-// Error satisfies the builtin error interface
-func (e IdentityRequestValidationError) Error() string {
-	cause := ""
-	if e.cause != nil {
-		cause = fmt.Sprintf(" | caused by: %v", e.cause)
-	}
-
-	key := ""
-	if e.key {
-		key = "key for "
-	}
-
-	return fmt.Sprintf(
-		"invalid %sIdentityRequest.%s: %s%s",
-		key,
-		e.field,
-		e.reason,
-		cause)
-}
-
-var _ error = IdentityRequestValidationError{}
-
-var _ interface {
-	Field() string
-	Reason() string
-	Key() bool
-	Cause() error
-	ErrorName() string
-} = IdentityRequestValidationError{}
